@@ -182,7 +182,6 @@ public class JSONObject implements Serializable {
      * <code>JSONObject.NULL.equals(null)</code> returns <code>true</code>.
      * <code>JSONObject.NULL.toString()</code> returns <code>"null"</code>.
      */
-    @SuppressWarnings("synthetic-access")
     public static final Object NULL = new Null();
 
 
@@ -729,7 +728,7 @@ public class JSONObject implements Serializable {
         try {
             Object o = opt(key);
             return o instanceof Number ? ((Number)o).doubleValue() :
-                new Double((String)o).doubleValue();
+                Double.valueOf((String)o).doubleValue();
         } catch (Exception e) {
             return defaultValue;
         }
@@ -880,7 +879,7 @@ public class JSONObject implements Serializable {
      * @throws JSONException If the key is null or if the number is invalid.
      */
     public JSONObject put(String key, double value) throws JSONException {
-        put(key, new Double(value));
+        put(key, Double.valueOf(value));
         return this;
     }
 
@@ -908,7 +907,7 @@ public class JSONObject implements Serializable {
      * @throws JSONException If the key is null.
      */
     public JSONObject put(String key, long value) throws JSONException {
-        put(key, new Long(value));
+        put(key, Long.valueOf(value));
         return this;
     }
 
